--- a/main.html
+++ b/main.html
@@ -8,6 +8,34 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header></h1>3 idiot</header>
+	<nav>
+		<a id="nav-actor" href="#actor">Actors</a>
+		<a id="nav-quote" href="#quote">Quote</a>
+	</nav>
+
+	<summary>
+		This movie follows three engineering students who question the traditional education system. 
+        The story beautifully mixes friendship, emotions, and the idea of following passion.
+	</summary>
+
+	<section id="actor">
+        Aamir Khan, R. Madhavan, Sharman Joshi, Kareena Kapoor and Boman Irani played major roles in the film.
+    </section>
+
+    <section id="quote">
+        "All is well" is the most iconic quote of the movie that teaches optimism in difficult times.
+    </section>
+
+	<aside>
+		IMDb Rating: 8.4/10 | Release Date: 25 December 2009.
+	</aside>
+
+	<footer>
+        Produced by: Vidhu Vinod Chopra.
+    </footer>
+		
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
